# zipwalk

./: README.md
.github/workflows/: cmake.yaml
samples/: 123.deflate  123.txt
src/: CMakeLists.txt  config.h.in  main.c
src/lib/: CMakeLists.txt  zipwalk.c  zipwalk.h
src/test/: CMakeLists.txt  test-my_inflate.c
